--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy\n",
+    "# NumPy\n",
     "\n",
     "[NumPy](https://docs.scipy.org/doc/numpy/) is a Python library for handling multi-dimensional arrays. It contains both the data structures needed for the storing and accessing arrays, and operations and functions for computation using these arrays. Although the arrays are usually used for storing numbers, other type of data can be stored as well, such as strings. Unlike lists in core Python, NumPy's fundamental data structure, the array, must have the same data type for all its elements. The homogeneity of arrays allows highly optimized functions that use arrays as their inputs and outputs.\n",
     "\n",
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "## Creation of arrays\n",
-    "There are several ways of creating Numpy arrays. One way is to give a (nested) list as a parameter to the `array` constructor:"
+    "There are several ways of creating NumPy arrays. One way is to give a (nested) list as a parameter to the `array` constructor:"
    ]
   },
   {
@@ -1527,7 +1527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's measure how much slower Python's `sum` function is compared to Numpy's equivalent when aggrating over an array:"
+    "Let's measure how much slower Python's `sum` function is compared to NumPy's equivalent when aggrating over an array:"
    ]
   },
   {
@@ -1869,19 +1869,20 @@
     "## Summary\n",
     "\n",
     "* We have learned how regular expressions can be used to specify regular sets of strings\n",
-    "  * we know how to find out if a string matches a regular expression\n",
-    "  * we know how to extract pieces of text that match a RE\n",
-    "  * we can replace matches to a RE with another string\n",
+    "\n",
+    "    * We know how to find out if a string matches a regular expression\n",
+    "    * We know how to extract pieces of text that match a RE\n",
+    "    * We can replace matches to a RE with another string\n",
     "* We can read (and write) a text file either line by line or whole file at the same time\n",
     "* We also know how to specify the encoding of the file. The utf-8 encoding is a very common and can represent nearly every character or symbol of any (natural) language\n",
     "* Program's parameters are in the array `sys.argv`, and we can return a value from the program with the function `sys.exit`\n",
     "* The file streams `sys.stdin`, `sys.stdout`, and `sys.stderr` allow basic textual input and output to and from the program\n",
     "* Every value in Python is an object\n",
-    "  * Classes are user defined data types, they tell how to construct instances (objects) of that type\n",
-    "  * Relationship between objects and classes: `isinstance`\n",
-    "  * Relationship between classes: `issubclass`\n",
+    "    * Classes are user defined data types, they tell how to construct instances (objects) of that type\n",
+    "    * Relationship between objects and classes: `isinstance`\n",
+    "    * Relationship between classes: `issubclass`\n",
     "* Exceptions signal exceptional situations, not necessarily errors\n",
-    "  * We know how catch and raise exceptions\n",
+    "    * We know how catch and raise exceptions\n",
     "* The efficiency of NumPy is based on the fact that the same operations can be performed on elements fast, if\n",
     "all the elements have the same type. These are called vectorized operations\n",
     "* We know how to create, reshape, perform basic access, combine, split, and aggregate arrays"
