--- a/numpy2.ipynb
+++ b/numpy2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy (continues)"
+    "# NumPy (continues)"
    ]
   },
   {
@@ -936,7 +936,7 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise X (matrix power)</div>\n",
     "\n",
-    "Repeat the functionality of the Numpy function `numpy.linalg.matrix_power`, which raises a square matrix of shape (m,m) to the `n`th power. Here the multiplication is the matrix multiplication. Square matrix `a` raised to power `n` is therefore `a @ a @ ... @ a` where `a` is repeated `n` times. When n is zero then $a^0$ is equal to `np.eye(m)`.\n",
+    "Repeat the functionality of the NumPy function `numpy.linalg.matrix_power`, which raises a square matrix of shape (m,m) to the `n`th power. Here the multiplication is the matrix multiplication. Square matrix `a` raised to power `n` is therefore `a @ a @ ... @ a` where `a` is repeated `n` times. When n is zero then $a^0$ is equal to `np.eye(m)`.\n",
     "\n",
     "Part 1.\n",
     "\n",
