--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -2830,7 +2830,13 @@
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise 15 (last week)</div>\n",
     "\n",
-    "Write function `last_week` that reads the top40 data set mentioned in the above exercise. The function should then try to reconstruct the top40 list of the previous week based on that week's list. Try to do this as well as possible. You can fill the values that are impossible to reconstruct by missing value symbols.\n",
+    "Write function `last_week` that reads the top40 data set mentioned in the above exercise. The function should then try to reconstruct the top40 list of the previous week based on that week's list. Try to do this as well as possible. You can fill the values that are impossible to reconstruct by missing value symbols. Your solution should work for a top40 list of any week. So don't rely on specific features of this top40 list.\n",
+    "\n",
+    "Hint. First create the last week's top40 list of those songs that are also on this week's list. Then add those entries that were not on this week's list. Finally sort by position.\n",
+    "\n",
+    "Hint 2. The `where` method of Series and DataFrame can be useful. It can also be nested.\n",
+    "\n",
+    "You get a second point, if you get the columns `LW` and `Peak Pos` correct.\n",
     "\n",
     "<hr/>"
    ]
