Added summary for week 4.

--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -3066,6 +3066,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Summary (week 4)\n",
+    "\n",
+    "* You can create DataFrames in several ways:\n",
+    "     * By reading from a csv file\n",
+    "     * Out out two dimensional NumPy array\n",
+    "     * Out of rows\n",
+    "     * Out of columns\n",
+    "* You know how to access rows, columns and individual elements of DataFrames\n",
+    "* You can use the `describe` method to get a quick overview of a DataFrame\n",
+    "* You now how missing values are represented in Series and DataFrames, and you know how to manipulate them\n",
+    "* There are similarities between Python's string methods and the vectorized forms of string operations in Series and DataFrames\n",
+    "* You can do complicated text processing with the `str.replace` method combined with regular expressions\n",
+    "* The powerful `where` method is the vectorized form of Python's `if-else` construct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<!--NAVIGATION-->\n",
     "\n",
     "\n",
