Added exercises; cleanup

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ML: Linear regression\n",
+    "# Machine learning \n",
+    "\n",
+    "## Linear regression\n",
     "Regression analysis tries to explain relationships between variables. One of these variables, called dependend variable, is what we want to \"explain\" using one or more *explanatory variables*. In linear regression we assume that the dependent variable can be, approximately, expressed as a linear combination of the explanatory variables. As a simple example, we might have dependent variable height and an explanatory variable age. The age of a person can quite well explain the height of a person, and this relationship is approximately linear for kids (ages between 1 and 16). Another way of thinking about regression is fitting a curve to the observed data points. If we have only one explanatory variable, then this is easy to visualize, as we shall see below.\n",
     "\n",
     "We can apply the linear regression easily with the [scikit-learn](https://scikit-learn.org/stable/) package. Let's go through some examples."
@@ -367,7 +369,9 @@
     "Coefficient of X5 is ...\n",
     "```\n",
     "\n",
-    "Which features you think are needed to explain the response Y?"
+    "Which features you think are needed to explain the response Y?\n",
+    "\n",
+    "<hr/>"
    ]
   },
   {
@@ -394,14 +398,74 @@
     "R2-score with feature(s) X4: ...\n",
     "R2-score with feature(s) X5: ...\n",
     "```\n",
-    "How small can the R2-score be? Experiment both with fitting the intercept and without fitting the intercept."
+    "How small can the R2-score be? Experiment both with fitting the intercept and without fitting the intercept.\n",
+    "\n",
+    "<hr/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\">Exercise 13 ()</div>"
+    "#### <div class=\"alert alert-info\">Exercise 13 (cycling weather continues)</div>\n",
+    "\n",
+    "Write function `cycling_weather_continues` that tries to explain with linear regression the variable of a cycling measuring station's counts using the weather data from corresponding day. The function should take the name of a (cycling) measuring station as a parameter and return the regression coefficients and the score. In more detail:\n",
+    "\n",
+    "Read the weather data set from the `src` folder. Use forward fill to fill the missing values. Read the cycling data set from folder `src` and restrict it to year 2017. Further, get the sums of cycling counts for each day. Merge the two datasets by the year, month, and day. In the linear regression use as explanatory variables the following columns `'Precipitation amount (mm)'`, `'Snow depth (cm)'`, and `'Air temperature (degC)'`. Explain the variable (measuring station), whose name is given as a parameter to the function `cycling_weather_continues`. Fit also the intercept. The function should return a pair, whose first element is the regression coefficients and the second element is the score. Above, you may need to use the method `reset_index` (its counterpart is the method `set_index`).\n",
+    "\n",
+    "The output from the `main` function should be in the following form:\n",
+    "\n",
+    "```\n",
+    "Measuring station: x\n",
+    "Regression coefficient for variable 'precipitation': x.x\n",
+    "Regression coefficient for variable 'snow depth': x.x\n",
+    "Regression coefficient for variable 'temperature': x.x\n",
+    "Score: x.xx\n",
+    "```\n",
+    "\n",
+    "Use precision of one decimal for regression coefficients, and precision of two decimals for the score.\n",
+    "In the `main` function test you solution using some measuring station, for example `Baana`.\n",
+    "\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional information\n",
+    "\n",
+    "* The [scikit-learn](https://scikit-learn.org/stable/) library concentrates on machine learning. Check out library [statsmodels](http://www.statsmodels.org/stable/index.html) for a more statistical viewpoint to regression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary (week 5)\n",
+    "\n",
+    "* `pd.concat` and `pd.merge` can both combine two DataFrames, but the way the combining is done differs. The function `pd.concat` concatenates based on *indices* of DataFrames, whereas `pd.merge` combines based on the *content* of common variable(s).\n",
+    "* The option `join=\"outer` to `pd.concat` can create missing values, but `join=inner` cannot. The former gives the union of indices and the latter gives the intersection of indices.\n",
+    "* With `pd.concat` overlapping indices can:\n",
+    "\n",
+    "     * cause an error\n",
+    "     * cause renumbering of indices\n",
+    "     * create hierarchical indices\n",
+    "* Merging can join elements\n",
+    "\n",
+    "     * one-to-one\n",
+    "     * one-to-many\n",
+    "     * many-to-many\n",
+    "* In grouping a DataFrame can be thought to be split into smaller DataFrames. The major classes of operations on these groups are:\n",
+    "\n",
+    "     * aggregate\n",
+    "     * filter\n",
+    "     * transform (retains shape)\n",
+    "     * apply\n",
+    "* Series which are indexed by time are called time series\n",
+    "* Linear regression can be used to find out linear relationships between variables\n",
+    "     * can have more than one feature (explanatory variable)\n",
+    "     * fitting polynomials is still linear regression"
    ]
   },
   {
