Improved machine learning part, renumbered exercises

--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "In supervised learning an algorithm is first given a training set of data points with their features and labels. Then the algorithm learns from these features and labels a (probabilistic) model, which can afterwards be used to predict the labels of previously unseen data.\n",
     "\n",
-    "*Naive Bayes classification* is a fast and simple to understand method. Its speed is due to some simplifications we make about the underlying probability distributions, namely, the assumption about the independence of features. Yet, it can be quite powerful, especially when there are enough features in the data.\n",
+    "*Naive Bayes classification* is a fast and simple to understand classification method. Its speed is due to some simplifications we make about the underlying probability distributions, namely, the assumption about the independence of features. Yet, it can be quite powerful, especially when there are enough features in the data.\n",
     "\n",
     "Suppose we have for each label L a probability distribution. This distribution gives probability for each possible combination of features (a feature vector):\n",
     "\n",
@@ -170,6 +170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we do the actual plotting:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 328,
    "metadata": {},
@@ -227,18 +234,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 342,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# These densities based on samples don't look good.\n",
-    "#data1=np.random.multivariate_normal(model.theta_[0], np.identity(2)*model.sigma_[0], size=1000)\n",
-    "#data1 = pd.DataFrame(data1, columns=['x','y'])\n",
-    "#sns.kdeplot(data1.x, data1.y)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,14 +271,8 @@
     "n=500\n",
     "x1 = np.random.multivariate_normal(mean1, cov, n).T\n",
     "x2 = np.random.multivariate_normal(mean2, cov, n).T\n",
-    "#print(type(x1), x1.shape)\n",
-    "#print(x1[:5])\n",
     "X=np.vstack([x1.T,x2.T])\n",
-    "#print(X[:5])\n",
     "y=np.hstack([[0]*n, [1]*n]).T\n",
-    "#y=np.hstack([y1,y2])\n",
-    "#plt.hist2d(X[:,0], X[:,1], bins=100, cmap='Blues');\n",
-    "#plt.scatter(X[:,0], X[:,1], c=y)\n",
     "plt.scatter(X[:n,0], X[:n,1], color=\"red\", label=0)\n",
     "plt.scatter(X[n:,0], X[n:,1], color=\"blue\", label=1)\n",
     "plt.legend();"
@@ -413,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We next try to classificate a set of messages that were posted on a public forum. The messages were divided into groups by the topics. So, we have a data set ready for classification testing. Let's first load this data using scikit-learn and print the message categories."
+    "We next try to classify a set of messages that were posted on a public forum. The messages were divided into groups by the topics. So, we have a data set ready for classification testing. Let's first load this data using scikit-learn and print the message categories."
    ]
   },
   {
@@ -461,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We concentrate on four message categories only. The tool fetch_20newsgroups allows us to easily split the data into training and testing data."
+    "We concentrate on four message categories only. The tool `fetch_20newsgroups` allows us to easily split the data into training and testing data."
    ]
   },
   {
@@ -509,7 +498,7 @@
     "\n",
     "Let's try to model these messages using multinomial distributions. Each message category has its own distribution. A multinomial distribution has $f$ non-negative parameters $\\theta_1,\\ldots , \\theta_f$, which sum up to one. For example, the parameter $\\theta_3$ might tell the the probability of the word \"board\" appearing in a message of the category this distribution is describing.\n",
     "\n",
-    "In scikit-learn there is a class CountVectorizer that converts messages in form of text strings to feature vectors. We can integrate this conversion with the model we are using (multinomial naive Bayes), so that the conversion happens automatically as part of the fit method. We achive this integration using the make_pipeline tool."
+    "In scikit-learn there is a class `CountVectorizer` that converts messages in form of text strings to feature vectors. We can integrate this conversion with the model we are using (multinomial naive Bayes), so that the conversion happens automatically as part of the `fit` method. We achive this integration using the `make_pipeline` tool."
    ]
   },
   {
@@ -684,43 +673,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\">Exercise 5 (blob_classification)</div>\n",
+    "#### <div class=\"alert alert-info\">Exercise 1 (blob_classification)</div>\n",
     "\n",
-    "Write a function blob_classification that gets feature matrix X and label vector y as parameters. It should then return the accuracy score of the prediction. Do the prediction using GaussianNB, and use train_test_split function from sklearn to split the dataset in to two equal halves: one for training and one for testing. Give parameter random_state=0 to the splitting function so that the result is deterministic. Use training set size of 75% of the whole data."
+    "Write function `blob_classification` that gets feature matrix X and label vector y as parameters. It should then return the accuracy score of the prediction. Do the prediction using `GaussianNB`, and use `train_test_split` function from sklearn to split the dataset in to two equal halves: one for training and one for testing. Give parameter `random_state=0` to the splitting function so that the result is deterministic. Use training set size of 75% of the whole data.\n",
+    "<hr/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\">Exercise 6 (plant classification)</div>\n",
+    "#### <div class=\"alert alert-info\">Exercise 2 (plant classification)</div>\n",
     "\n",
-    "Write function plant_classification that does the following:\n",
+    "Write function `plant_classification` that does the following:\n",
     "\n",
-    "* loads the iris dataset using sklearn (sklearn.datasets.load_iris)\n",
-    "* splits the data into training and testing part using the train_test_split function so that the training set size is 80% of the whole data (give the call also the random_state=0 argument to make the result deterministic)\n",
+    "* loads the iris dataset using sklearn (`sklearn.datasets.load_iris`)\n",
+    "* splits the data into training and testing part using the `train_test_split` function so that the training set size is 80% of the whole data (give the call also the `random_state=0` argument to make the result deterministic)\n",
     "* use Gaussian naive Bayes to fit the training data\n",
     "* predict labels of the test data\n",
-    "* the function should return the accuracy score of the prediction performance (sklearn.metrics.accuracy_score)"
+    "* the function should return the accuracy score of the prediction performance (`sklearn.metrics.accuracy_score`)\n",
+    "<hr/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\">Exercise 7 (word classification)</div>\n",
+    "#### <div class=\"alert alert-info\">Exercise 3 (word classification)</div>\n",
     "\n",
     "Part 1.\n",
     "\n",
-    "Write function get_features that gets a one dimensional np.array, containing words, as parameter. It should return a feature matrix of shape (n, 29), where n is the number of elements of the input array. There should be one feature for each of the letters in the following alphabet: \"abcdefghijklmnopqrstuvwxyzäö-\".\n",
+    "Write function `get_features` that gets a one dimensional np.array, containing words, as parameter. It should return a feature matrix of shape (n, 29), where n is the number of elements of the input array. There should be one feature for each of the letters in the following alphabet: \"abcdefghijklmnopqrstuvwxyzäö-\".\n",
     "\n",
     "Part 2.\n",
     "\n",
-    "Write function contains_valid_chars that takes a string as a parameter and returns the truth value of whether all the characters in the string belong to the alphabet or not.\n",
+    "Write function `contains_valid_chars` that takes a string as a parameter and returns the truth value of whether all the characters in the string belong to the alphabet or not.\n",
     "\n",
     "Part 3.\n",
     "\n",
-    "Write function get_features_and_labels() that returns the tuple (X, y) of the feature matrix and the target vector. Use the labels 0 and 1 for Finnish and English, respectively. Use the supplied functions load_finnish() and load_english() to get the lists of words. Filter the lists in the following ways:\n",
+    "Write function `get_features_and_labels` that returns the tuple (X, y) of the feature matrix and the target vector. Use the labels 0 and 1 for Finnish and English, respectively. Use the supplied functions load_finnish() and load_english() to get the lists of words. Filter the lists in the following ways:\n",
     "\n",
     "* Convert the Finnish words to lowercase, and then filter out those words that contain characters that don't belong to the alphabet.\n",
     "* For the English words first filter out those words that begin with an uppercase letter to get rid of proper nouns. Then proceed as with the Finnish words.\n",
@@ -733,26 +724,27 @@
     "\n",
     "Use the function `get_features_and_labels` you made earlier to get the feature matrix and the labels. Use multinomial naive Bayes to do the classification. Get the accuracy scores using the `sklearn.model_selection.cross_val_score` function; use 5-fold cross validation. The function should return a list of five accuracy scores.\n",
     "\n",
-    "The cv parameter of cross_val_score can be either an integer, which specifies the number of folds, or it can be a *cross-validation generator* that generates the (train set,test set) pairs. What happens if you pass the following cross-validation generator to `cross_val_score` as a parameter: `sklearn.model_selection.KFold(n_splits=5, shuffle=True, random_state=0)`.\n",
+    "The cv parameter of `cross_val_score` can be either an integer, which specifies the number of folds, or it can be a *cross-validation generator* that generates the (train set,test set) pairs. What happens if you pass the following cross-validation generator to `cross_val_score` as a parameter: `sklearn.model_selection.KFold(n_splits=5, shuffle=True, random_state=0)`.\n",
     "\n",
-    "Why the difference?"
+    "Why the difference?\n",
+    "<hr/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\">Exercise 8 (spam detection)</div>\n",
+    "#### <div class=\"alert alert-info\">Exercise 4 (spam detection)</div>\n",
     "\n",
     "In the src folder there are two files: ham.txt.gz and spam.txt.gz. The files are preprocessed versions of the files from https://spamassassin.apache.org/old/publiccorpus/. There is one email per line. The file ham.txt.gz contains emails that are non-spam, and, conversely, emails in file spam.txt are spam. The email headers have been removed, except for the subject line, and non-ascii characters have been deleted.\n",
     "\n",
-    "Write function spam_detection that does the following:\n",
+    "Write function `spam_detection` that does the following:\n",
     "\n",
     "* reads these files. Use function open from gzip module, since the files are compressed.\n",
     "* forms the combined feature matrix using `CountVectorizer` class' `fit_transform` method.\n",
     "* use labels 0 for ham and 1 for spam\n",
     "* divide that feature matrix and the target label into training and test sets, using `train_test_split`\n",
-    "* train a MultinomialNB model, and use it to predict the labels for the test set\n",
+    "* train a `MultinomialNB` model, and use it to predict the labels for the test set\n",
     "\n",
     "The function should return a triple consisting of\n",
     "\n",
@@ -760,7 +752,8 @@
     "* size of test sample\n",
     "* number of misclassified sample points\n",
     "\n",
-    "Pass the function's random_state parameter to function `train_test_split`."
+    "Pass the function's random_state parameter to function `train_test_split`.\n",
+    "<hr/>"
    ]
   },
   {
