--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The score was the best possible, which is not a surprise, since we tried to predict the data we had already seen!"
+    "The score was the best possible, which is not a surprise, since we tried to predict the data we had already seen! Later we will split our data into two parts: one for learning the model and the other for testing its predictive skills."
    ]
   },
   {
@@ -531,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The classifier seem to work quite well! \n",
+    "The classifier seem to work quite well! Notice that now we used separate data for testing the model.\n",
     "\n",
     "Let's have a closer look at the resulting feature vectors."
    ]
