Finished materials of week 6

--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -675,7 +675,7 @@
    "source": [
     "#### <div class=\"alert alert-info\">Exercise 1 (blob_classification)</div>\n",
     "\n",
-    "Write function `blob_classification` that gets feature matrix X and label vector y as parameters. It should then return the accuracy score of the prediction. Do the prediction using `GaussianNB`, and use `train_test_split` function from sklearn to split the dataset in to two equal halves: one for training and one for testing. Give parameter `random_state=0` to the splitting function so that the result is deterministic. Use training set size of 75% of the whole data.\n",
+    "Write function `blob_classification` that gets feature matrix X and label vector y as parameters. It should then return the accuracy score of the prediction. Do the prediction using `GaussianNB`, and use `train_test_split` function from `sklearn` to split the dataset in to two equal halves: one for training and one for testing. Give parameter `random_state=0` to the splitting function so that the result is deterministic. Use training set size of 75% of the whole data.\n",
     "<hr/>"
    ]
   },
@@ -719,6 +719,8 @@
     "Use get_features function you made earlier to form the feature matrix.\n",
     "\n",
     "Part 4.\n",
+    "\n",
+    "We have earlier seen examples where we split the data into learning part and testing part. This way we can test whether the model can really be used to predict unseen data. However, it can be that we had bad luck and the split produced very biased learning and test datas. To counter this, we can perform the split several times and take as the final result the average from the different splits. This is called [cross validation](<https://en.wikipedia.org/wiki/Cross-validation_(statistics)>).\n",
     "\n",
     "Create `word_classification` function that does the following:\n",
     "\n",
