--- a/pca.ipynb
+++ b/pca.ipynb
@@ -342,7 +342,23 @@
     "\n",
     "Part 2.\n",
     "\n",
-    "Plot the cumulative explained variances. The y-axis should be the cumulative sum, and the x-axis the number of terms in the cumulative sum."
+    "Plot the cumulative explained variances. The y-axis should be the cumulative sum, and the x-axis the number of terms in the cumulative sum.\n",
+    "<hr/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary (week 6)\n",
+    "\n",
+    "* We got to know another supervised learning method, namely, naive Bayes classification\n",
+    "* We saw examples where either Gaussian or multinomial distribution was used to model the features of samples belonging to a class\n",
+    "* We saw how to use cross validation to asses prediction abilities of a model. This allows us to be sure that the model is not overfitting.\n",
+    "* In the clustering section we saw examples of using k-means, DBSCAN, and hierarchical clustering methods. They have different approaches to clustering, and each have different strengths.\n",
+    "* The clustering was based on the notion of distance between the points in the data.\n",
+    "* Principal component analysis is another example of unsupervised learning\n",
+    "* It can reduce the dimensionality of a data by throwing away those dimensions where the variability is low."
    ]
   },
   {
