--- a/pca.ipynb
+++ b/pca.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ML: Principal component analysis\n",
+    "# ML: Principal component analysis\n",
+    "\n",
+    "## Principal component analysis\n",
     "\n",
     "Principal component analysis is an unsupervised learning method that tries to detect the directions in which the vector formed data varies most. It first finds the direction of highest variance, and then proceeds to discover directions of highest variance that are orthogonal to those direction already found. So, for n dimensional data, it returns, by default, n orthogonal directions and the corresponding variances. These directions are called *pricipal axes*, and if we project a data point to these axes, we get the *principal components* of each axis.\n",
     "\n",
@@ -350,13 +352,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Summary (week 6)\n",
+    "## Summary (week 6)\n",
     "\n",
     "* We got to know another supervised learning method, namely, naive Bayes classification\n",
-    "* We saw examples where either Gaussian or multinomial distribution was used to model the features of samples belonging to a class\n",
+    "* We saw examples of naive Bayes classification where either Gaussian or multinomial distribution was used to model the features of samples belonging to a class\n",
     "* We saw how to use cross validation to asses prediction abilities of a model. This allows us to be sure that the model is not overfitting.\n",
     "* In the clustering section we saw examples of using k-means, DBSCAN, and hierarchical clustering methods. They have different approaches to clustering, and each have different strengths.\n",
-    "* The clustering was based on the notion of distance between the points in the data.\n",
+    "* Clustering is based on the notion of distance between the points in the data.\n",
     "* Principal component analysis is another example of unsupervised learning\n",
     "* It can reduce the dimensionality of a data by throwing away those dimensions where the variability is low."
    ]
