--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -7,7 +7,24 @@
     "<!--NAVIGATION-->\n",
     "\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/matplotlib.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/matplotlib.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n",
+    "\n",
+    " [Exercise 9 (multiple graphs)](#Exercise-9-(multiple-graphs)) | [Exercise 10 (subfigures)](#Exercise-10-(subfigures))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test (1)\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "## Test (2)\n",
+    "\n",
+    "### Test (3)\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -98,7 +115,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\"> Exercise 9 (multiple graphs)</div>\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "#### Exercise 9 (multiple graphs)\n",
+    "\n",
+    "</div>\n",
     "\n",
     "In the above plot the x coordinates were implicitly set to the indices of the array `a`, that is, `arange(10)`. Find out from the documentation of `plt.plot` how to specify the x coordinates explicitly. Find out also how to draw multiple graphs in one figure.\n",
     "\n",
@@ -170,7 +191,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div class=\"alert alert-info\"> Exercise 10 (subfigures)</div>\n",
+    "<div class=\"alert alert-info\"> \n",
+    "\n",
+    "#### Exercise 10 (subfigures)\n",
+    "\n",
+    "</div>\n",
     "\n",
     "Write function `subfigures` that creates a figure that has two subfigures (two *axes* in matplotlib parlance). The function gets an array `a` as a parameter. In the left subfigure draw using the `plot` *method* a graph, whose x coordinates are in the first column of `a` and the y coordinates are in the second column of `a`. In the right subfigure draw using the `scatter` *method* a set of points whose x coords are again in the first column of `a` and whose y coordinates are in the second column of `a`. Additionally, the points should get their color from the third column of `a`, and size of the point from the fourth column of `a`. For this, use the `c` and `s` named parameters of `scatter`, respectively\n",
     "\n",
