--- a/basics.ipynb
+++ b/basics.ipynb
@@ -14,6 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"#Exercise-1-(hello-world)\">Exercise 1 (hello world)</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python"
    ]
   },
