--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -532,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can give a list of rows as a parameter to the DataFrame constructor. If we want to give names for the columns, then either the rows can be dictionaries, where the key is the column name and the values are the elements of the DataFrame on that row and column, or the column must be given explicitly. An example of this:"
+    "We can give a list of rows as a parameter to the DataFrame constructor. Each row is given as a dict, list, Series, or NumPy array. If we want to give names for the columns, then either the rows must be dictionaries, where the key is the column name and the values are the elements of the DataFrame on that row and column, or else the column names must be given explicitly. An example of this:"
    ]
   },
   {
